--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
     "morgan": "^1.10.1",
-    "node-cron": "^4.2.1"
+    "node-cron": "^4.2.1",
+    "request-ip": "^3.3.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.4",
@@ -47,10 +48,13 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.10",
     "@types/node-cron": "^3.0.11",
+    "@types/request-ip": "^0.0.41",
+    "bull-arena": "^4.5.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "nodemon": "^3.1.10",
     "prom-client": "^15.1.3",
+    "redis": "^5.7.0",
     "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
     "taze": "^19.1.0",
